added HRA Calculator Car Loan vs Lease Calculator Education Loan Calculator Gold Investment Calculator Section 80D Medical Insurance Deduction

--- a/index.html
+++ b/index.html
@@ -110,32 +110,38 @@
 
     <a href="calculators/emi-calculator.html" class="tool-card"><h3>EMI Calculator</h3><p>Loan EMI & interest</p></a>
     <a href="calculators/income-tax-calculator.html" class="tool-card"><h3>Income Tax Calculator</h3><p>Old vs New Regime comparison</p></a>
-    <a href="calculators/ppf-maturity-calculator.html" class="tool-card"><h3>PPF Maturity Calculator</h3><p>Public Provident Fund maturity</p></a>
-    <a href="calculators/epf-calculator.html" class="tool-card"><h3>EPF Calculator</h3><p>Employee Provident Fund maturity</p></a>
+    <a href="calculators/sip-calculator.html" class="tool-card"><h3>SIP Calculator</h3><p>Systematic Investment Plan returns</p></a>
     <a href="calculators/fd-calculator.html" class="tool-card"><h3>FD Calculator</h3><p>Fixed deposit maturity</p></a>
+    <a href="calculators/epf-calculator.html" class="tool-card"><h3>EPF Calculator</h3><p>Employee Provident Fund maturity</p></a>
+    <a href="calculators/loan-eligibility-calculator.html" class="tool-card"><h3>Loan Eligibility Calculator</h3><p>Check loan eligibility & EMI</p></a>
+    <a href="calculators/hra-calculator.html" class="tool-card"><h3>HRA Calculator</h3><p>House Rent Allowance exemption</p></a>
+    <a href="calculators/ppf-maturity-calculator.html" class="tool-card"><h3>PPF Maturity Calculator</h3><p>Public Provident Fund maturity</p></a>
+    <a href="calculators/lumpsum-investment-calculator.html" class="tool-card"><h3>Lumpsum Investment Calculator</h3><p>Future value of lump sum</p></a>
+    <a href="calculators/gratuity-calculator.html" class="tool-card"><h3>Gratuity Calculator</h3><p>Calculate gratuity amount</p></a>
+    <a href="calculators/compound-interest-calculator.html" class="tool-card"><h3>Compound Interest Calculator</h3><p>Investment growth</p></a>
+    <a href="calculators/capital-gains-tax-calculator.html" class="tool-card"><h3>Capital Gains Tax Calculator</h3><p>Calculate LTCG & STCG tax</p></a>
     <a href="calculators/rd-calculator.html" class="tool-card"><h3>RD Calculator</h3><p>Recurring deposit maturity</p></a>
     <a href="calculators/nps-calculator.html" class="tool-card"><h3>NPS Calculator</h3><p>National Pension System maturity</p></a>
-    <a href="calculators/capital-gains-tax-calculator.html" class="tool-card"><h3>Capital Gains Tax Calculator</h3><p>Calculate LTCG & STCG tax</p></a>
-    <a href="calculators/mutual-fund-return-calculator.html" class="tool-card"><h3>Mutual Fund Return Calculator</h3><p>Calculate MF SIP & lumpsum returns</p></a>
-    <a href="calculators/sip-calculator.html" class="tool-card"><h3>SIP Calculator</h3><p>Systematic Investment Plan returns</p></a>
-    <a href="calculators/loan-eligibility-calculator.html" class="tool-card"><h3>Loan Eligibility Calculator</h3><p>Check loan eligibility & EMI</p></a>
-    <a href="calculators/retirement-planning-calculator.html" class="tool-card"><h3>Retirement Planning Calculator</h3><p>Plan your retirement corpus</p></a>
-    <a href="calculators/compound-interest-calculator.html" class="tool-card"><h3>Compound Interest Calculator</h3><p>Investment growth</p></a>
-    <a href="calculators/net-worth-calculator.html" class="tool-card"><h3>Net Worth Calculator</h3><p>Financial net worth</p></a>
+    <a href="calculators/education-loan-calculator.html" class="tool-card"><h3>Education Loan Calculator</h3><p>Student loan EMI with moratorium</p></a>
     <a href="calculators/credit-card-debt-payoff-calculator.html" class="tool-card"><h3>Credit Card Debt Payoff Calculator</h3><p>Debt payoff time</p></a>
-    <a href="calculators/lumpsum-investment-calculator.html" class="tool-card"><h3>Lumpsum Investment Calculator</h3><p>Future value of lump sum</p></a>
+    <a href="calculators/retirement-planning-calculator.html" class="tool-card"><h3>Retirement Planning Calculator</h3><p>Plan your retirement corpus</p></a>
+    <a href="calculators/mutual-fund-return-calculator.html" class="tool-card"><h3>Mutual Fund Return Calculator</h3><p>Calculate MF SIP & lumpsum returns</p></a>
     <a href="calculators/step-up-sip-calculator.html" class="tool-card"><h3>Step-Up SIP Calculator</h3><p>SIP with increment</p></a>
-    <a href="calculators/real-cagr-calculator.html" class="tool-card"><h3>Real CAGR Calculator</h3><p>Compound annual growth rate</p></a>
-    <a href="calculators/emi-vs-sip-comparison-tool.html" class="tool-card"><h3>EMI vs SIP Comparison Tool</h3><p>Compare loan vs investment</p></a>
-    <a href="calculators/buy-vs-rent-calculator.html" class="tool-card"><h3>Buy vs Rent Calculator</h3><p>Compare buying house vs renting</p></a>
     <a href="calculators/loan-prepayment-foreclosure-calculator.html" class="tool-card"><h3>Loan Prepayment Foreclosure Calculator</h3><p>Savings from early repayment</p></a>
-    <a href="calculators/break-even-investment-calculator.html" class="tool-card"><h3>Break-Even Investment Calculator</h3><p>Calculate investment break-even point</p></a>
+    <a href="calculators/car-loan-vs-lease-calculator.html" class="tool-card"><h3>Car Loan vs Lease Calculator</h3><p>Compare auto financing options</p></a>
+    <a href="calculators/buy-vs-rent-calculator.html" class="tool-card"><h3>Buy vs Rent Calculator</h3><p>Compare buying house vs renting</p></a>
+    <a href="calculators/real-cagr-calculator.html" class="tool-card"><h3>Real CAGR Calculator</h3><p>Compound annual growth rate</p></a>
+    <a href="calculators/medical-insurance-80d-calculator.html" class="tool-card"><h3>Section 80D Medical Insurance Calculator</h3><p>Calculate tax deduction on medical insurance</p></a>
     <a href="calculators/fire-calculator.html" class="tool-card"><h3>FIRE Calculator</h3><p>Financial Independence Retire Early</p></a>
     <a href="calculators/wealth-goal-calculator.html" class="tool-card"><h3>Wealth Goal Calculator</h3><p>Plan to achieve ₹1 Cr / ₹5 Cr</p></a>
+    <a href="calculators/gold-investment-calculator.html" class="tool-card"><h3>Gold Investment Calculator</h3><p>Calculate returns on gold</p></a>
+    <a href="calculators/emi-vs-sip-comparison-tool.html" class="tool-card"><h3>EMI vs SIP Comparison Tool</h3><p>Compare loan vs investment</p></a>
+    <a href="calculators/net-worth-calculator.html" class="tool-card"><h3>Net Worth Calculator</h3><p>Financial net worth</p></a>
     <a href="calculators/monthly-savings-planner.html" class="tool-card"><h3>Monthly Savings Planner</h3><p>Plan your monthly savings goals</p></a>
+    <a href="calculators/break-even-investment-calculator.html" class="tool-card"><h3>Break-Even Investment Calculator</h3><p>Calculate investment break-even point</p></a>
     <a href="calculators/credit-score-impact-simulator.html" class="tool-card"><h3>Credit Score Impact Simulator</h3><p>Simulate credit score changes</p></a>
-    <a href="calculators/simple-vs-compound-interest-calculator.html" class="tool-card"><h3>Simple vs Compound Interest Calculator</h3><p>Compare simple and compound interest</p></a>
     <a href="calculators/inflation-impact-calculator.html" class="tool-card"><h3>Inflation Impact Calculator</h3><p>Calculate purchasing power loss</p></a>
+    <a href="calculators/simple-vs-compound-interest-calculator.html" class="tool-card"><h3>Simple vs Compound Interest Calculator</h3><p>Compare simple and compound interest</p></a>
 
   </div>
 
