--- a/tools.html
+++ b/tools.html
@@ -45,33 +45,39 @@
 
   <div style="display:grid; grid-template-columns:repeat(auto-fit, minmax(220px, 1fr)); gap:16px; margin-top:20px;">
     <a href="calculators/emi-calculator.html" class="tool-card">EMI Calculator</a>
-    <a href="calculators/sip-calculator.html" class="tool-card">SIP Calculator</a>
     <a href="calculators/income-tax-calculator.html" class="tool-card">Income Tax Calculator</a>
-    <a href="calculators/ppf-maturity-calculator.html" class="tool-card">PPF Maturity Calculator</a>
-    <a href="calculators/epf-calculator.html" class="tool-card">EPF Calculator</a>
+    <a href="calculators/sip-calculator.html" class="tool-card">SIP Calculator</a>
     <a href="calculators/fd-calculator.html" class="tool-card">FD Calculator</a>
+    <a href="calculators/epf-calculator.html" class="tool-card">EPF Calculator</a>
+    <a href="calculators/loan-eligibility-calculator.html" class="tool-card">Loan Eligibility Calculator</a>
+    <a href="calculators/hra-calculator.html" class="tool-card">HRA Calculator</a>
+    <a href="calculators/ppf-maturity-calculator.html" class="tool-card">PPF Maturity Calculator</a>
+    <a href="calculators/lumpsum-investment-calculator.html" class="tool-card">Lumpsum Investment Calculator</a>
+    <a href="calculators/gratuity-calculator.html" class="tool-card">Gratuity Calculator</a>
+    <a href="calculators/compound-interest-calculator.html" class="tool-card">Compound Interest Calculator</a>
+    <a href="calculators/capital-gains-tax-calculator.html" class="tool-card">Capital Gains Tax Calculator</a>
     <a href="calculators/rd-calculator.html" class="tool-card">RD Calculator</a>
     <a href="calculators/nps-calculator.html" class="tool-card">NPS Calculator</a>
-    <a href="calculators/capital-gains-tax-calculator.html" class="tool-card">Capital Gains Tax Calculator</a>
-    <a href="calculators/mutual-fund-return-calculator.html" class="tool-card">Mutual Fund Return Calculator</a>
-    <a href="calculators/loan-eligibility-calculator.html" class="tool-card">Loan Eligibility Calculator</a>
-    <a href="calculators/retirement-planning-calculator.html" class="tool-card">Retirement Planning Calculator</a>
-    <a href="calculators/compound-interest-calculator.html" class="tool-card">Compound Interest Calculator</a>
-    <a href="calculators/net-worth-calculator.html" class="tool-card">Net Worth Calculator</a>
+    <a href="calculators/education-loan-calculator.html" class="tool-card">Education Loan Calculator</a>
     <a href="calculators/credit-card-debt-payoff-calculator.html" class="tool-card">Credit Card Debt Payoff Calculator</a>
-    <a href="calculators/lumpsum-investment-calculator.html" class="tool-card">Lumpsum Investment Calculator</a>
+    <a href="calculators/retirement-planning-calculator.html" class="tool-card">Retirement Planning Calculator</a>
+    <a href="calculators/mutual-fund-return-calculator.html" class="tool-card">Mutual Fund Return Calculator</a>
     <a href="calculators/step-up-sip-calculator.html" class="tool-card">Step-Up SIP Calculator</a>
-    <a href="calculators/real-cagr-calculator.html" class="tool-card">Real CAGR Calculator</a>
-    <a href="calculators/emi-vs-sip-comparison-tool.html" class="tool-card">EMI vs SIP Comparison Tool</a>
-    <a href="calculators/buy-vs-rent-calculator.html" class="tool-card">Buy vs Rent Calculator</a>
     <a href="calculators/loan-prepayment-foreclosure-calculator.html" class="tool-card">Loan Prepayment Foreclosure Calculator</a>
-    <a href="calculators/break-even-investment-calculator.html" class="tool-card">Break-Even Investment Calculator</a>
+    <a href="calculators/car-loan-vs-lease-calculator.html" class="tool-card">Car Loan vs Lease Calculator</a>
+    <a href="calculators/buy-vs-rent-calculator.html" class="tool-card">Buy vs Rent Calculator</a>
+    <a href="calculators/real-cagr-calculator.html" class="tool-card">Real CAGR Calculator</a>
+    <a href="calculators/medical-insurance-80d-calculator.html" class="tool-card">Section 80D Medical Insurance Calculator</a>
     <a href="calculators/fire-calculator.html" class="tool-card">FIRE Calculator</a>
     <a href="calculators/wealth-goal-calculator.html" class="tool-card">Wealth Goal Calculator</a>
+    <a href="calculators/gold-investment-calculator.html" class="tool-card">Gold Investment Calculator</a>
+    <a href="calculators/emi-vs-sip-comparison-tool.html" class="tool-card">EMI vs SIP Comparison Tool</a>
+    <a href="calculators/net-worth-calculator.html" class="tool-card">Net Worth Calculator</a>
     <a href="calculators/monthly-savings-planner.html" class="tool-card">Monthly Savings Planner</a>
+    <a href="calculators/break-even-investment-calculator.html" class="tool-card">Break-Even Investment Calculator</a>
     <a href="calculators/credit-score-impact-simulator.html" class="tool-card">Credit Score Impact Simulator</a>
-    <a href="calculators/simple-vs-compound-interest-calculator.html" class="tool-card">Simple vs Compound Interest Calculator</a>
     <a href="calculators/inflation-impact-calculator.html" class="tool-card">Inflation Impact Calculator</a>
+    <a href="calculators/simple-vs-compound-interest-calculator.html" class="tool-card">Simple vs Compound Interest Calculator</a>
   </div>
 
 </div>
