Added in hand salary and salary hike calcultors

--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@
     <a href="calculators/sip-calculator.html" class="tool-card"><h3>SIP Calculator</h3><p>Systematic Investment Plan returns</p></a>
     <a href="calculators/fd-calculator.html" class="tool-card"><h3>FD Calculator</h3><p>Fixed deposit maturity</p></a>
     <a href="calculators/epf-calculator.html" class="tool-card"><h3>EPF Calculator</h3><p>Employee Provident Fund maturity</p></a>
+    <a href="calculators/in-hand-salary-calculator.html" class="tool-card"><h3>In-Hand Salary Calculator</h3><p>Calculate CTC to take-home salary</p></a>
+    <a href="calculators/salary-hike-percentage-calculator.html" class="tool-card"><h3>Salary Hike Percentage Calculator</h3><p>Calculate salary increment & appraisal</p></a>
     <a href="calculators/loan-eligibility-calculator.html" class="tool-card"><h3>Loan Eligibility Calculator</h3><p>Check loan eligibility & EMI</p></a>
     <a href="calculators/hra-calculator.html" class="tool-card"><h3>HRA Calculator</h3><p>House Rent Allowance exemption</p></a>
     <a href="calculators/ppf-maturity-calculator.html" class="tool-card"><h3>PPF Maturity Calculator</h3><p>Public Provident Fund maturity</p></a>
