--- a/tools.html
+++ b/tools.html
@@ -49,6 +49,8 @@
     <a href="calculators/sip-calculator.html" class="tool-card">SIP Calculator</a>
     <a href="calculators/fd-calculator.html" class="tool-card">FD Calculator</a>
     <a href="calculators/epf-calculator.html" class="tool-card">EPF Calculator</a>
+    <a href="calculators/in-hand-salary-calculator.html" class="tool-card">In-Hand Salary Calculator</a>
+    <a href="calculators/salary-hike-percentage-calculator.html" class="tool-card">Salary Hike Percentage Calculator</a>
     <a href="calculators/loan-eligibility-calculator.html" class="tool-card">Loan Eligibility Calculator</a>
     <a href="calculators/hra-calculator.html" class="tool-card">HRA Calculator</a>
     <a href="calculators/ppf-maturity-calculator.html" class="tool-card">PPF Maturity Calculator</a>
