--- a/calculators/income-tax-calculator.html
+++ b/calculators/income-tax-calculator.html
@@ -47,13 +47,19 @@
         "@type": "ListItem",
         "position": 1,
         "name": "Home",
-        "item": "https://www.yoursite.com/"
+        "item": "https://gyanprakash0711.github.io/upkarna-online-tools/"
       },
       {
         "@type": "ListItem",
         "position": 2,
+        "name": "Tools",
+        "item": "https://gyanprakash0711.github.io/upkarna-online-tools/tools.html"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
         "name": "Income Tax Calculator",
-        "item": "https://www.yoursite.com/calculators/income-tax-calculator.html"
+        "item": "https://gyanprakash0711.github.io/upkarna-online-tools/calculators/income-tax-calculator.html"
       }
     ]
   }
@@ -120,12 +126,13 @@
 
 <div class="container">
 
-  <!-- BREADCRUMB -->
-  <nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
-      <li class="breadcrumb-item active" aria-current="page">Income Tax Calculator</li>
-    </ol>
+  <!-- Breadcrumb -->
+  <nav class="breadcrumb">
+    <a href="../index.html">Home</a>
+    <span>›</span>
+    <a href="../tools.html">Tools</a>
+    <span>›</span>
+    <span class="current">Income Tax Calculator</span>
   </nav>
 
   <h1>Income Tax Calculator (Old vs New Regime)</h1>
